--- a/events.html
+++ b/events.html
@@ -1,67 +1,31 @@
-<!doctype html>
-<html lang="ar" dir="rtl" data-theme="light">
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>فعاليات مجلس طلاب خطوة – La Trobe</title>
-  <meta name="description" content="فعاليات مجلس طلاب خطوة في ملبورن: ورش، بطولات، ملتقيات. سجل الآن واطّلع على التقويم."/>
-  <meta name="theme-color" content="#1e40af"/>
-  <style>
-    /* نفس التنسيقات */
-    :root{--primary:#1e40af;--primary-600:#1d4ed8;--bg:#fff;--text:#0f172a;--muted:#6b7280;--ring:#e5e7eb;--card:#f8fafc;--accent-red:#d41c0f;--accent-green:#00703c}
-    *{box-sizing:border-box}html,body{height:100%}body{margin:0;font-family:"Segoe UI",system-ui,-apple-system,Tahoma,Arial,sans-serif;background:var(--bg);color:var(--text);line-height:1.6}
-    a{color:inherit;text-decoration:none}img{max-width:100%;display:block}
-    .container{width:min(1120px,92%);margin-inline:auto}
-    .navbar{position:sticky;top:0;z-index:40;background:rgba(255,255,255,.85);backdrop-filter:saturate(180%) blur(8px);border-bottom:1px solid var(--ring)}
-    .nav-inner{display:flex;align-items:center;justify-content:space-between;padding:.8rem 0}
-    .brand{display:flex;align-items:center;gap:.8rem;font-weight:700}
-    .flag{width:18px;height:18px;border-radius:4px;overflow:hidden;display:inline-grid;grid-template-columns:1fr 1fr 1fr;border:2px solid #000;box-shadow:0 0 0 1px #000 inset}
-    .flag .r{background:var(--accent-red)}.flag .g{background:var(--accent-green)}.flag .b{background:#000}
-    .nav-links{display:flex;gap:1rem;align-items:center}
-    .nav-links a{padding:.5rem .75rem;border-radius:10px;font-weight:600}
-    .nav-links a:hover{background:var(--card)}.nav-cta{padding:.55rem .9rem;border-radius:12px;background:var(--primary);color:#fff!important;box-shadow:0 4px 18px rgba(29,78,216,.18)}
-    .nav-cta:hover{background:var(--primary-600)}.menu-toggle{display:none;border:1px solid var(--ring);padding:.5rem .7rem;border-radius:10px;background:#fff}
-    @media(max-width:860px){.menu-toggle{display:inline-flex}.nav-links{display:none;position:absolute;right:4%;left:4%;top:64px;flex-direction:column;padding:.75rem;background:#fff;border:1px solid var(--ring);border-radius:14px;box-shadow:0 10px 30px rgba(0,0,0,.06)}.nav-links.open{display:flex}.nav-links a{width:100%}}
-    header.hero{background:linear-gradient(180deg,#ffffff 0%,#f5f7ff 100%);border-bottom:1px solid var(--ring)}
-    .hero-inner{padding:2.6rem 0;display:grid;grid-template-columns:1fr .9fr;gap:2rem;align-items:center}
-    .hero h1{margin:0 0 .3rem;font-size:clamp(1.5rem,2vw+1rem,2.2rem)}.muted{color:var(--muted)}
-    @media(max-width:980px){.hero-inner{grid-template-columns:1fr}}
-    section{padding:2rem 0}.toolbar{display:flex;gap:.6rem;flex-wrap:wrap;align-items:center;margin:.6rem 0 1rem}
-    .input{border:1px solid var(--ring);border-radius:12px;padding:.6rem .8rem}.select{border:1px solid var(--ring);border-radius:12px;padding:.55rem .8rem;background:#fff}
-    .btn{display:inline-flex;align-items:center;gap:.5rem;padding:.7rem .95rem;border-radius:12px;border:1px solid var(--ring);cursor:pointer;background:#fff}
-    .btn-primary{background:var(--primary);border-color:transparent;color:#fff;box-shadow:0 10px 22px rgba(29,78,216,.2)}.btn-primary:hover{background:var(--primary-600)}
-    .grid{display:grid;gap:1rem}.grid-3{grid-template-columns:repeat(3,1fr)}@media(max-width:980px){.grid-3{grid-template-columns:1fr}}
-    .card{background:#fff;border:1px solid var(--ring);border-radius:16px;padding:1rem;display:grid;gap:.5rem}
-    .chip{display:inline-block;font-size:.78rem;padding:.25rem .55rem;border-radius:999px;background:var(--card);border:1px solid var(--ring)}
-    .bar{height:8px;background:var(--card);border-radius:999px;overflow:hidden}
-    .bar>span{display:block;height:100%;background:linear-gradient(90deg,var(--primary),var(--primary-600))}
-    .calendar{background:#fff;border:1px solid var(--ring);border-radius:16px;padding:1rem}
-    .cal-head{display:flex;justify-content:space-between;align-items:center;margin-bottom:.6rem}
-    .cal-grid{display:grid;grid-template-columns:repeat(7,1fr);gap:.4rem}
-    .day{padding:.7rem;border:1px dashed var(--ring);border-radius:10px;min-height:84px;display:flex;flex-direction:column;gap:.3rem}
-    .day .d{font-weight:700}.day .dot{width:8px;height:8px;border-radius:999px;background:var(--primary)}
-    footer{border-top:1px solid var(--ring);background:#fff}.foot{display:grid;grid-template-columns:1.2fr 1fr;gap:1rem;padding:1.4rem 0}
-    @media(max-width:860px){.foot{grid-template-columns:1fr}}
-  </style>
+  <meta charset="UTF-8">
+  <title>الفعاليات | مجلس طلاب خطوة</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <nav class="navbar" aria-label="الشريط العلوي">
-    <div class="container nav-inner">
-      <a class="brand" href="/index.html" aria-label="العودة للرئيسية">
-        <span class="flag" aria-hidden="true"><span class="r"></span><span class="g"></span><span class="b"></span></span>
-        <span>مجلس طلاب خطوة – La Trobe</span>
-      </a>
-      <button id="menuBtn" class="menu-toggle" aria-expanded="false" aria-controls="primary-menu">القائمة</button>
-      <div id="primary-menu" class="nav-links" role="menubar">
-        <a href="/index.html#about" role="menuitem">من نحن</a>
-        <a href="/events.html" aria-current="page" role="menuitem">الفعاليات</a>
-        <a href="/contact.html" role="menuitem">تواصل</a>
-        <a href="/index.html#join" class="nav-cta" role="menuitem">انضم للمجلس</a>
-      </div>
-    </div>
-  </nav>
+  <header>
+    <h1>فعاليات مجلس طلاب خطوة</h1>
+    <nav>
+      <a href="index.html">الرئيسية</a> |
+      <a href="events.html">الفعاليات</a> |
+      <a href="contact.html">تواصل معنا</a>
+    </nav>
+  </header>
 
-  <!-- باقي الصفحة كما هو -->
-  ...
+  <main>
+    <h2>أحدث الفعاليات</h2>
+    <p>سيتم إضافة الفعاليات هنا قريبًا ✨.</p>
+  </main>
+
+  <footer>
+    <p>© <span id="year"></span> مجلس طلاب خطوة</p>
+  </footer>
+
+  <script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
