--- a/index.html
+++ b/index.html
@@ -89,10 +89,11 @@
 
       <button id="menuBtn" class="menu-toggle" aria-expanded="false" aria-controls="primary-menu">القائمة</button>
       <div id="primary-menu" class="nav-links" role="menubar">
-        <a href="#about" role="menuitem">من نحن</a>
-        <a href="#news" role="menuitem">الأخبار</a>
+        <a href="/index.html#about" role="menuitem">من نحن</a>
+        <a href="/index.html#news" role="menuitem">الأخبار</a>
         <a href="/events.html" role="menuitem">الفعاليات</a>
-        <a href="#join" class="nav-cta" role="menuitem">انضم للمجلس</a>
+        <a href="/contact.html" role="menuitem">تواصل</a>
+        <a href="/index.html#join" class="nav-cta" role="menuitem">انضم للمجلس</a>
       </div>
     </div>
   </nav>
