--- a/contact.html
+++ b/contact.html
@@ -62,6 +62,7 @@
       <button id="menuBtn" class="menu-toggle" aria-expanded="false" aria-controls="primary-menu">القائمة</button>
       <div id="primary-menu" class="nav-links" role="menubar">
         <a href="/index.html#about" role="menuitem">من نحن</a>
+        <a href="/index.html#news" role="menuitem">الأخبار</a>
         <a href="/events.html" role="menuitem">الفعاليات</a>
         <a href="/contact.html" aria-current="page" role="menuitem">تواصل</a>
         <a href="/index.html#join" class="nav-cta" role="menuitem">انضم للمجلس</a>
