--- a/contact.html
+++ b/contact.html
@@ -121,9 +121,16 @@
           <p class="muted">البريد: <a href="mailto:khotwaaustralia@gmail.com">khotwaaustralia@gmail.com</a></p>
           <p class="muted">إنستغرام: <a target="_blank" rel="noopener" href="https://www.instagram.com/khotwa.sc/">@khotwa.sc</a></p>
           <hr style="border:none;border-top:1px solid var(--ring)"/>
-          <h4>خريطة الحرم (La Trobe – Melbourne)</h4>
+          <h4>خريطة الحرم (La Trobe – Bundoora)</h4>
           <div style="aspect-ratio:16/9;border:1px solid var(--ring);border-radius:12px;overflow:hidden">
-            <iframe title="خريطة La Trobe" width="100%" height="100%" style="border:0" loading="lazy" referrerpolicy="no-referrer-when-downgrade" src="https://www.google.com/maps?q=La%20Trobe%20University%20Melbourne&output=embed"></iframe>
+            <!-- تم التحديث إلى الفرع: Bundoora -->
+            <iframe
+              title="خريطة La Trobe – Bundoora"
+              width="100%" height="100%" style="border:0"
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+              src="https://www.google.com/maps?q=La%20Trobe%20University%20Bundoora%20Campus%20Plenty%20Rd%20%26%20Kingsbury%20Dr%20Bundoora%20VIC%203086&output=embed">
+            </iframe>
           </div>
         </aside>
       </div>
